# fast-rbac

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Dockerfile.frontend  ENDPOINTS.md  INDEX.md  LOGGING_DEMO.md  LOGS_DASHBOARD_README.md  README.md  README_FRONTEND.md  SECURITY.md  app.db  app.db-shm  app.db-wal  docker-compose.dev.yml  docker-compose.prod.yml  env.example  env.production.example  pyproject.toml
alembic/: env.py
alembic/versions/: 20250707_2015_c0c94ef5cbc5_add_2fa_fields_to_users_table.py  20250707_2147_ffb7aebb7d3c_add_nível_5_api_keys_tenants_webhooks_.py  20250707_2148_582d5b545e98_add_all_models_api_keys_tenants_webhooks.py  20250708_0157_8425bbb0eff3_make_tenant_id_non_nullable_for_api_.py
app/: __init__.py  main.py
app/auth/: dependencies.py  oauth.py  permissions.py  service.py  utils.py
app/config/: logging.py  settings.py
app/database/: base.py  init_data.py
app/middleware/: api_key_auth.py  logging.py  rate_limiting.py  rbac.py
app/models/: __init__.py  api_key.py  schemas.py  tenant.py  user.py  webhook.py
app/routes/: admin.py  api_keys.py  auth.py  auth_2fa.py  cache.py  oauth.py  protected.py  tenants.py  webhooks.py
app/schemas/: api_key.py  tenant.py  webhook.py
app/services/: api_key_service.py  cache_service.py  redis_service.py  tenant_service.py  totp_service.py  webhook_service.py
front/: __init__.py  streamlit_app.py
front/components/: auth.py  sidebar.py
front/config/: logging.py  settings.py
front/pages/: dashboard.py  examples.py  login.py  logs_dashboard.py  permissions.py  users.py
tests/: conftest.py  test_admin_core.py  test_api_keys.py  test_auth_core.py  test_integration.py  test_multitenancy.py  test_performance.py  test_protected_core.py  test_tenants.py  test_webhooks.py
(+14 files in other folders)
